[gd_scene load_steps=72 format=3 uid="uid://c8k7e24ip26gn"]

[ext_resource type="Script" path="res://Enemies/spearman.gd" id="1_s5ilp"]
[ext_resource type="Texture2D" uid="uid://ihaoufi683ok" path="res://warriorpack/Warrior_3/Attack_1.png" id="2_bl1ci"]
[ext_resource type="Texture2D" uid="uid://dvsjo6tckrbgg" path="res://warriorpack/Warrior_3/Attack_2.png" id="3_sqqc7"]
[ext_resource type="Texture2D" uid="uid://bprdkk6arkxh2" path="res://warriorpack/Warrior_3/Protect.png" id="4_35lox"]
[ext_resource type="Texture2D" uid="uid://bol8gocqsso47" path="res://warriorpack/Warrior_3/Dead.png" id="5_mfmpo"]
[ext_resource type="Texture2D" uid="uid://ck8i8elhamufb" path="res://warriorpack/Warrior_3/Hurt.png" id="6_dtdsv"]
[ext_resource type="Texture2D" uid="uid://blsn5bx87e4ed" path="res://warriorpack/Warrior_3/Idle.png" id="7_7f2js"]
[ext_resource type="Texture2D" uid="uid://n4ydu63tohtt" path="res://warriorpack/Warrior_3/Run.png" id="8_2x2ey"]
[ext_resource type="Texture2D" uid="uid://bhutkvrapmlm2" path="res://warriorpack/Warrior_3/Run+Attack.png" id="9_nda1n"]
[ext_resource type="Texture2D" uid="uid://cx7yx3ik1n17i" path="res://warriorpack/Warrior_3/Walk.png" id="10_jnhxu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bw8fs"]
radius = 17.0
height = 48.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8my8p"]
atlas = ExtResource("2_bl1ci")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_grc5t"]
atlas = ExtResource("2_bl1ci")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuyjj"]
atlas = ExtResource("2_bl1ci")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3a3m"]
atlas = ExtResource("2_bl1ci")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwol7"]
atlas = ExtResource("3_sqqc7")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvpea"]
atlas = ExtResource("3_sqqc7")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fp3e"]
atlas = ExtResource("3_sqqc7")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4nrq"]
atlas = ExtResource("4_35lox")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hppug"]
atlas = ExtResource("4_35lox")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wg3hx"]
atlas = ExtResource("4_35lox")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv14e"]
atlas = ExtResource("5_mfmpo")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_txg5y"]
atlas = ExtResource("5_mfmpo")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4skj4"]
atlas = ExtResource("5_mfmpo")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fy04"]
atlas = ExtResource("5_mfmpo")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew50d"]
atlas = ExtResource("6_dtdsv")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieujy"]
atlas = ExtResource("6_dtdsv")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_shu2m"]
atlas = ExtResource("7_7f2js")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmy6v"]
atlas = ExtResource("7_7f2js")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvfwx"]
atlas = ExtResource("7_7f2js")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hlay"]
atlas = ExtResource("7_7f2js")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vspqj"]
atlas = ExtResource("7_7f2js")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkkdx"]
atlas = ExtResource("4_35lox")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_orhhs"]
atlas = ExtResource("4_35lox")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3plc"]
atlas = ExtResource("4_35lox")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ptlt"]
atlas = ExtResource("8_2x2ey")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c101w"]
atlas = ExtResource("8_2x2ey")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2ouh"]
atlas = ExtResource("8_2x2ey")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih5iu"]
atlas = ExtResource("8_2x2ey")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_60s41"]
atlas = ExtResource("8_2x2ey")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp7le"]
atlas = ExtResource("8_2x2ey")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_58sug"]
atlas = ExtResource("9_nda1n")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojvqy"]
atlas = ExtResource("9_nda1n")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4g8cw"]
atlas = ExtResource("9_nda1n")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_djqcg"]
atlas = ExtResource("9_nda1n")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_63mul"]
atlas = ExtResource("10_jnhxu")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c23pi"]
atlas = ExtResource("10_jnhxu")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m04ym"]
atlas = ExtResource("10_jnhxu")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcfl3"]
atlas = ExtResource("10_jnhxu")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m52q"]
atlas = ExtResource("10_jnhxu")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xafeg"]
atlas = ExtResource("10_jnhxu")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtkw4"]
atlas = ExtResource("10_jnhxu")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kucri"]
atlas = ExtResource("10_jnhxu")
region = Rect2(672, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_xsklh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8my8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grc5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuyjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3a3m")
}],
"loop": true,
"name": &"Attack_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwol7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvpea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fp3e")
}],
"loop": true,
"name": &"Attack_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4nrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hppug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wg3hx")
}],
"loop": false,
"name": &"Block",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv14e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txg5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4skj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fy04")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew50d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieujy")
}],
"loop": true,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shu2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmy6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvfwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hlay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vspqj")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkkdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orhhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3plc")
}],
"loop": true,
"name": &"Protect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ptlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c101w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2ouh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih5iu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60s41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp7le")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_58sug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojvqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4g8cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djqcg")
}],
"loop": true,
"name": &"Run Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63mul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c23pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m04ym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcfl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m52q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xafeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtkw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kucri")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_y1dsi"]
resource_name = "Attack_1"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack_1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_otxl7"]
resource_name = "Attack_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack_2"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_qj4rq"]
resource_name = "Block"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Block"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shield/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_q6fek"]
resource_name = "Dead"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Dead"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_55asy"]
resource_name = "Hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_yj5xm"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_bqvis"]
resource_name = "Protect"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Protect"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shield/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_pvrdc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shield/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gyrnq"]
resource_name = "Run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_gl68u"]
resource_name = "Run Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_6mma7"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xqyhw"]
_data = {
"Attack_1": SubResource("Animation_y1dsi"),
"Attack_2": SubResource("Animation_otxl7"),
"Block": SubResource("Animation_qj4rq"),
"Dead": SubResource("Animation_q6fek"),
"Hurt": SubResource("Animation_55asy"),
"Idle": SubResource("Animation_yj5xm"),
"Protect": SubResource("Animation_bqvis"),
"RESET": SubResource("Animation_pvrdc"),
"Run": SubResource("Animation_gyrnq"),
"Run Attack": SubResource("Animation_gl68u"),
"Walk": SubResource("Animation_6mma7")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4ba7v"]
radius = 440.01

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xdf7g"]
size = Vector2(28.5, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmtwy"]
size = Vector2(49, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dufoo"]
size = Vector2(38, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pm77b"]
size = Vector2(22, 44)

[node name="Spearman" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_s5ilp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -23)
shape = SubResource("CapsuleShape2D_bw8fs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -48)
sprite_frames = SubResource("SpriteFrames_xsklh")
animation = &"Attack_1"
frame = 1
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_xqyhw")
}

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_4ba7v")

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-5.25, -23)
shape = SubResource("RectangleShape2D_xdf7g")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(0, -48)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(22.5, 24.5)
shape = SubResource("RectangleShape2D_lmtwy")

[node name="Swing" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Swing"]
position = Vector2(28, -23)
shape = SubResource("RectangleShape2D_dufoo")

[node name="Shield" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
position = Vector2(6, -22)
shape = SubResource("RectangleShape2D_pm77b")
disabled = true

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Swing" to="." method="_on_swing_body_entered"]
[connection signal="body_exited" from="Swing" to="." method="_on_swing_body_exited"]
[connection signal="area_entered" from="Shield" to="." method="_on_shield_area_entered"]
